exports[`test should accept custom classes thru classes prop 1`] = `
<Primary active={false} fundId="test" changeFund={[Function]} changeAmount={[Function]} preFill={[Function]} accounts={{...}} classes="test1 test2">
  <div>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      I&#39;d like to give
    </h3>
    <Input hideLabel={true} type="tel" classes={{...}} inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" format={[Function]} defaultValue={[undefined]} style={{...}}>
      <div className="input soft-bottom input--active display-inline-block" style={{...}} data-spec="input-wrapper">
        <RenderLabel hideLabel={true} id={[undefined]} name={[undefined]} label={[undefined]} disabled={[undefined]} />
        <input id={[undefined]} type="tel" placeholder="$0.00" name={[undefined]} className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} style={{...}} maxLength="" data-spec="input" />
      </div>
    </Input>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      to
    </h3>
    <Select items={{...}} name="select-account" hideLabel={true} classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" placeholder="select fund" onChange={[Function]} selected="test">
      <div className="input soft-bottom display-inline-block select_1rryh47 input--active select_15p0e27">
        <select id="select-account" placeholder="select fund" name="select-account" className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value="test">
          <option style={{...}}>
            select fund
          </option>
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`test should accept multiple accounts through accounts prop 1`] = `
<Primary active={false} fundId="test" changeFund={[Function]} changeAmount={[Function]} preFill={[Function]} accounts={{...}}>
  <div>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      I&#39;d like to give
    </h3>
    <Input hideLabel={true} type="tel" classes={{...}} inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" format={[Function]} defaultValue={[undefined]} style={{...}}>
      <div className="input soft-bottom input--active display-inline-block" style={{...}} data-spec="input-wrapper">
        <RenderLabel hideLabel={true} id={[undefined]} name={[undefined]} label={[undefined]} disabled={[undefined]} />
        <input id={[undefined]} type="tel" placeholder="$0.00" name={[undefined]} className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} style={{...}} maxLength="" data-spec="input" />
      </div>
    </Input>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      to
    </h3>
    <Select items={{...}} name="select-account" hideLabel={true} classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" placeholder="select fund" onChange={[Function]} selected="test">
      <div className="input soft-bottom display-inline-block select_1rryh47 input--active select_15p0e27">
        <select id="select-account" placeholder="select fund" name="select-account" className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value="test">
          <option style={{...}}>
            select fund
          </option>
          <option className={[undefined]} value="hello">
            hello
          </option>
          <option className={[undefined]} value="world">
            world
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`test should change classes based on active state 1`] = `
<Primary active={true} fundId="test" changeFund={[Function]} changeAmount={[Function]} preFill={[Function]} accounts={{...}}>
  <div>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      I&#39;d like to give
    </h3>
    <Input hideLabel={true} type="tel" classes={{...}} inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" format={[Function]} defaultValue={[undefined]} style={{...}}>
      <div className="input soft-bottom input--active display-inline-block" style={{...}} data-spec="input-wrapper">
        <RenderLabel hideLabel={true} id={[undefined]} name={[undefined]} label={[undefined]} disabled={[undefined]} />
        <input id={[undefined]} type="tel" placeholder="$0.00" name={[undefined]} className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} style={{...}} maxLength="" data-spec="input" />
      </div>
    </Input>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      to
    </h3>
    <Select items={{...}} name="select-account" hideLabel={true} classes={{...}} inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" placeholder="select fund" onChange={[Function]} selected="test">
      <div className="input soft-bottom display-inline-block select_1rryh47 input--active select_15p0e27">
        <select id="select-account" placeholder="select fund" name="select-account" className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value="test">
          <option style={{...}}>
            select fund
          </option>
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`test should render with minimal props 1`] = `
<Primary active={false} fundId="test" changeFund={[Function]} changeAmount={[Function]} preFill={[Function]} accounts={{...}}>
  <div>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      I&#39;d like to give
    </h3>
    <Input hideLabel={true} type="tel" classes={{...}} inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" format={[Function]} defaultValue={[undefined]} style={{...}}>
      <div className="input soft-bottom input--active display-inline-block" style={{...}} data-spec="input-wrapper">
        <RenderLabel hideLabel={true} id={[undefined]} name={[undefined]} label={[undefined]} disabled={[undefined]} />
        <input id={[undefined]} type="tel" placeholder="$0.00" name={[undefined]} className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} style={{...}} maxLength="" data-spec="input" />
      </div>
    </Input>
    <h3 className="text-dark-tertiary display-inline-block push-half-bottom push-half-right">
      to
    </h3>
    <Select items={{...}} name="select-account" hideLabel={true} classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" placeholder="select fund" onChange={[Function]} selected="test">
      <div className="input soft-bottom display-inline-block select_1rryh47 input--active select_15p0e27">
        <select id="select-account" placeholder="select fund" name="select-account" className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value="test">
          <option style={{...}}>
            select fund
          </option>
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;
